[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CXXWrapper"
version = "0.0.1"
description = "Tool used to warpping CXX code in python"
readme = "README.md"
authors = [{ name = "Shubham Kumar", email = "shyubhamr@gmail.com" }]
license = { file = "LICENSE" }
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Programming Language :: Python :: 3",
]
keywords = ["CXX Code warpping", 
            "Custom CXXtypes in python", 
            ]   
 
dependencies = [ "pybind11", "numpy", "IPython","colorama","termcolor"]
requires-python = ">=3.10"


